--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2421,6 +2421,7 @@ observatory.aspect.presentation                                               = 
 observatory.aspect.structure                                                  = Estructura
 observatory.check.modality.text.green                                         = Por lo tanto, valor = 0 y modalidad = pasa
 observatory.check.modality.text.red                                           = Por lo tanto, valor = 0 y modalidad = falla
+observatory.evolution.segment.title                                           = Evoluci\u00F3n del segmento {0}
 observatory.global.allocation.segment.comparision.table.title                 = Nivel de adecuaci\u00F3n estimado (% de sitios web) por segmento
 observatory.graphic.accesibility.evolution.approval.A.name                    = EvolucionNivelConformidadAccesibilidadA
 observatory.graphic.accesibility.evolution.approval.AA.name                   = EvolucionNivelConformidadAccesibilidadAA
@@ -2429,15 +2430,16 @@ observatory.graphic.accessibility.evolution.approval.A.title                  = 
 observatory.graphic.accessibility.evolution.approval.AA.title                 = Evoluci\u00F3n del Nivel de Conformidad de Accesibilidad: AA
 observatory.graphic.accessibility.evolution.approval.NV.title                 = Evoluci\u00F3n del Nivel de Conformidad de Accesibilidad: No V\u00E1lido
 observatory.graphic.accessibility.level.allocation.by.page.title              = Distribuci\u00F3n de p\u00E1ginas seg\u00FAn el Nivel de adecuaci\u00F3n estimado
-observatory.graphic.accessibility.level.allocation.complex.title              = Situaci\u00F3n de cumplimiento estimada: complejidad {0}
+observatory.graphic.accessibility.level.allocation.complex.title              = Nivel de adecuaci\u00F3n estimado: complejidad {0}
 observatory.graphic.accessibility.level.allocation.name                       = DistribucionNivelAccesibilidadGlobal
 observatory.graphic.accessibility.level.allocation.segment.name               = DistribucionNivelAccesibilidadS{0}
 observatory.graphic.accessibility.level.allocation.segment.title              = Nivel de adecuaci\u00F3n estimado: segmento {0}
 observatory.graphic.accessibility.level.allocation.title                      = Nivel de adecuaci\u00F3n estimado global
 observatory.graphic.accessibility.level.compilance.segment.name               = DistribucionNivelCumplimientoS{0}
 observatory.graphic.accessibility.level.compilance.segment.title              = Situaci\u00F3n de cumplimiento estimada: segmento {0}
+observatory.graphic.accessibility.level.compliance.complex.title              = Situaci\u00F3n de cumplimiento estimada: complejidad {0}
 observatory.graphic.aspect.mid.name                                           = ComparacionMediasAspectos
-observatory.graphic.aspect.mid.title                                          = Comparaci\u00F3n de Medias orientadas a Aspectos
+observatory.graphic.aspect.mid.title                                          = Puntuaci\u00F3n media por aspecto
 observatory.graphic.aspects                                                   = Aspectos
 observatory.graphic.compilance.by.verification.level.1.category.title         = Conformidad de verificaci\u00F3n: segmento {0}. Nivel de adecuaci\u00F3n A
 observatory.graphic.compilance.by.verification.level.1.complex.title          = Conformidad de verificaci\u00F3n: complejidad {0}. Nivel de adecuaci\u00F3n A
@@ -2458,6 +2460,8 @@ observatory.graphic.evolution.aspect.mid.puntuation.name                      = 
 observatory.graphic.evolution.aspect.mid.puntuation.title                     = Evoluci\u00F3n de la Puntuaci\u00F3n Media por Aspecto
 observatory.graphic.evolution.mid.puntuation                                  = Evoluci\u00F3n de la Puntuaci\u00F3n Media del Observatorio
 observatory.graphic.evolution.mid.puntuation.name                             = EvolucionPuntuacionMediaObservatorio
+observatory.graphic.evolution.mid.puntuation.title.fixed                      = Evoluci\u00F3n de la Puntuaci\u00F3n media del observatorio: en t\u00E9rminos fijos
+observatory.graphic.evolution.mid.puntuation.title.general                    = Evoluci\u00F3n de la Puntuaci\u00F3n media del observatorio: en t\u00E9rminos generales
 observatory.graphic.evolution.verification.mid.puntuation                     = Evoluci\u00F3n de la Puntuaci\u00F3n Media por Verificaci\u00F3n. Verificaci\u00F3n {0}
 observatory.graphic.evolution.verification.mid.puntuation.name                = EvolucionPuntuacionMediaVerificacionV{0}
 observatory.graphic.global.puntuation.allocation.complexitiviy.strached.name  = ComparacionPuntuacionComplejidad
@@ -2494,8 +2498,8 @@ observatory.graphic.score.by.page.label                                       = 
 observatory.graphic.score.by.page.label.extended                              = Resultados: P\u00E1gina {0}
 observatory.graphic.score.by.page.table.title                                 = Verificaciones. Nivel de adecuaci\u00F3n {0}
 observatory.graphic.score.by.page.title                                       = Puntuaci\u00F3n media y Nivel de adecuaci\u00F3n estimado de p\u00E1gina
-observatory.graphic.segment.aspect.mid.title                                  = Comparaci\u00F3n de Medias orientadas a Aspectos: segmento {0}
-observatory.graphic.segment.aspect.mid.title.complex                          = Comparaci\u00F3n de Medias orientadas a Aspectos: complejidad {0}
+observatory.graphic.segment.aspect.mid.title                                  = Puntuaci\u00F3n media por aspecto: segmento {0}
+observatory.graphic.segment.aspect.mid.title.complex                          = Puntuaci\u00F3n media por aspecto: complejidad {0}
 observatory.graphic.site.number                                               = N\u00BA sitios web: 
 observatory.graphic.term                                                      = T\u00E9rminos: 
 observatory.graphic.term.number                                               = N\u00BA T\u00E9rminos: 
@@ -2508,8 +2512,8 @@ observatory.graphic.verification.mid.comparation.level.1.cat.title            = 
 observatory.graphic.verification.mid.comparation.level.1.complex.title        = Puntuaci\u00F3n Media por Verificaci\u00F3n: complejidad {0}. Nivel de adecuaci\u00F3n A
 observatory.graphic.verification.mid.comparation.level.1.name                 = ComparacionMediasVerificacionNAI
 observatory.graphic.verification.mid.comparation.level.1.title                = Puntuaci\u00F3n media de verificaci\u00F3n. Nivel de adecuaci\u00F3n A
-observatory.graphic.verification.mid.comparation.level.2.cat.title            = Puntuaci\u00F3n Media por Verificaci\u00F3n: segmento {0}. Nivel de adecuaci\u00F3n AA
-observatory.graphic.verification.mid.comparation.level.2.complex.title        = Puntuaci\u00F3n Media por Verificaci\u00F3n: complejidad {0}. Nivel de adecuaci\u00F3n AA
+observatory.graphic.verification.mid.comparation.level.2.cat.title            = Puntuaci\u00F3n media de verificaci\u00F3n: segmento {0}. Nivel de adecuaci\u00F3n AA
+observatory.graphic.verification.mid.comparation.level.2.complex.title        = Puntuaci\u00F3n media de verificaci\u00F3n: complejidad {0}. Nivel de adecuaci\u00F3n AA
 observatory.graphic.verification.mid.comparation.level.2.name                 = ComparacionMediasVerificacionNAII
 observatory.graphic.verification.mid.comparation.level.2.title                = Puntuaci\u00F3n media de verificaci\u00F3n. Nivel de adecuaci\u00F3n AA
 observatory.graphic.verification.points                                       = Puntos de verificaci\u00F3n
