--- a/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
+++ b/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
@@ -2557,6 +2557,7 @@ pdf.accessibility.global.evolution.problemAA.title      = Evoluci\u00F3n: Media 
 pdf.accessibility.global.evolution.warningA.title       = Evoluci\u00F3n: Media de Advertencias. A.
 pdf.accessibility.global.evolution.warningAA.title      = Evoluci\u00F3n: Media de Advertencias. AA.
 pdf.accessibility.global.priority.incidence             = Incidencias Por Prioridad Global
+pdf.accessibility.global.summary.globals                = Resultados globales
 pdf.accessibility.global.summary.info                   = Los niveles de adecuaci\u00F3n de verificaci\u00F3n, p\u00E1gina y sitio web, as\u00ED como la situaci\u00F3n de cumplimiento del sitio web, son una estimaci\u00F3n en base a unas verificaciones autom\u00E1ticas. Es SIEMPRE necesaria una revisi\u00F3n manual experta complementando todos los requisitos de UNE-EN 301 549:2019 para determinar el nivel de adecuaci\u00F3n REAL del sitio web.
 pdf.accessibility.global.summary.p1                     = En este apartado se muestran los resultados globales del sitio web calculados de acuerdo a la metodolog\u00EDa actual del Observatorio de Accesibilidad Web. Los resultados calculados son los siguientes:
 pdf.accessibility.global.summary.p2                     = La {0} refleja la cantidad de verificaciones de accesibilidad que se satisfacen correctamente. Por lo tanto, cuanta m\u00E1s alta sea la puntuaci\u00F3n m\u00E1s verificaciones de accesibilidad se est\u00E1n cumpliendo.
@@ -2645,6 +2646,7 @@ pdf.accessibility.seed.detail.tabla.tematica            = Tem\u00E1tica
 pdf.accessibility.seed.detail.tabla.titulo              = Detalles del sitio web
 pdf.accessibility.seed.detail.title                     = Detalles del sitio web analizado
 pdf.accessibility.subtitle                              = SEGUIMIENTO SIMPLIFICADO\nUNE-EN 301549:2019
+pdf.accessibility.summary.info                          = Este documento muestra \u00FAnicamente el resultado de aplicar verificaciones autom\u00E1ticas a la comprobaci\u00F3n de la declaraci\u00F3n de accesibilidad y no exime de realizar las verificaciones manuales que se estimen oportunas para cumplir con lo recogido en el art\u00EDculo 15 del RD 1112/2018.
 pdf.accessibility.title                                 = INFORME DE\nACCESIBILIDAD WEB\nCOMPROBACI\u00D3N DECLARACI\u00D3N DE ACCESIBILIDAD (BETA)
 pdf.accessibility.warning                               = Advertencia
 pdf.accessibility.warnings                              = Advertencias
