--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2508,8 +2508,8 @@ observatory.graphic.verification.compilance.comparation.level.1.name          = 
 observatory.graphic.verification.compilance.comparation.level.1.title         = Conformidad de verificaci\u00F3n. Nivel de adecuaci\u00F3n A
 observatory.graphic.verification.compilance.comparation.level.2.name          = ComparacionConformidadVerificacionII
 observatory.graphic.verification.compilance.comparation.level.2.title         = Conformidad de verificaci\u00F3n. Nivel de adecuaci\u00F3n AA
-observatory.graphic.verification.mid.comparation.level.1.cat.title            = Puntuaci\u00F3n Media por Verificaci\u00F3n: segmento {0}. Nivel de adecuaci\u00F3n A
-observatory.graphic.verification.mid.comparation.level.1.complex.title        = Puntuaci\u00F3n Media por Verificaci\u00F3n: complejidad {0}. Nivel de adecuaci\u00F3n A
+observatory.graphic.verification.mid.comparation.level.1.cat.title            = Puntuaci\u00F3n media de verificaci\u00F3n: segmento {0}. Nivel de adecuaci\u00F3n A
+observatory.graphic.verification.mid.comparation.level.1.complex.title        = Puntuaci\u00F3n media de verificaci\u00F3n: complejidad {0}. Nivel de adecuaci\u00F3n A
 observatory.graphic.verification.mid.comparation.level.1.name                 = ComparacionMediasVerificacionNAI
 observatory.graphic.verification.mid.comparation.level.1.title                = Puntuaci\u00F3n media de verificaci\u00F3n. Nivel de adecuaci\u00F3n A
 observatory.graphic.verification.mid.comparation.level.2.cat.title            = Puntuaci\u00F3n media de verificaci\u00F3n: segmento {0}. Nivel de adecuaci\u00F3n AA
