New mail patterns
fix get js on 300 codes


Former-commit-id: c675abb4eededd240e49e8a6ec9bacb6e04772c2

--- a/portal/profiles/desarrollo/log4j.properties
+++ b/portal/profiles/desarrollo/log4j.properties
@@ -13,7 +13,9 @@
 # Modificaciones: MINHAFP (Ministerio de Hacienda y Función Pública) 
 # Email: observ.accesibilidad@correo.gob.es
 #-------------------------------------------------------------------------------
-log4j.rootLogger=WARN, console, rastreador
+packages=org.graylog2.log4j2
+
+log4j.rootLogger=WARN, console, rastreador, graylog2
 log4j.logger.es.inteco.crawler.job.CrawlerJob=INFO, crawler
 log4j.logger.es.inteco.rastreador2.management=INFO, management
 log4j.logger.cz.vutbr=FATAL, rastreador
@@ -50,3 +52,16 @@ log4j.appender.management.MaxBackupIndex=10
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d %p [%c] - %m %n
+
+# Define the graylog2 destination
+log4j.appender.graylog2=org.graylog2.log.GelfAppender
+log4j.appender.graylog2.graylogHost=127.0.0.1 
+log4j.appender.graylog2.port=12202
+log4j.appender.graylog2.originHost=oaw-java
+log4j.appender.graylog2.layout=org.apache.log4j.PatternLayout
+log4j.appender.graylog2.additionalFields={'environment': 'DES', 'application': 'OAW'}
+log4j.appender.graylog2.extractStacktrace=true
+log4j.appender.graylog2.addExtendedInformation=true
+log4j.appender.graylog2.facility=gelfappender-test
+
+
