--- a/oaw/pom.xml
+++ b/oaw/pom.xml
@@ -122,6 +122,19 @@
 				<files.path>/tmp/oaw/files</files.path>
 			</properties>
 		</profile>
+
+		<profile>
+			<id>desarrollo2</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties>
+				<profile.name>desarrollo2</profile.name>
+				<deploy.path>/media/alvaro/01D4C9B8E7267650/oaw/databasepro_27022020/tomcat/webapps/oaw</deploy.path>
+				<files.path>/media/alvaro/01D4C9B8E7267650/oaw/databasepro_27022020/tmp/oaw/files</files.path>
+			</properties>
+		</profile>
+
 		<profile>
 			<id>integracion</id>
 			<properties>
