--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2799,9 +2799,13 @@ rastreo.realizado.busqueda.fecha.fin    = Fecha Fin
 rastreo.realizado.busqueda.fecha.inicio = Fecha Inicio
 rastreo.realizado.busqueda.semilla      = Semilla 
 
-report.config.title         = T\u00EDtulo del informe
-report.config.title.default = Informe de observatorio de accesibilidad web
-report.config.title.label   = T\u00EDtulo del documento generado
+report.config.title                              = T\u00EDtulo del informe
+report.config.title.default                      = Informe de observatorio de accesibilidad web
+report.config.title.label                        = T\u00EDtulo del documento generado
+report.evolution.allocation.graphic.title.fixed  = Evoluci\u00F3n del nivel de adecuaci\u00F3n estimado: en t\u00E9rminos fijos
+report.evolution.allocation.graphic.title.global = Evoluci\u00F3n del nivel de adecuaci\u00F3n estimado: en t\u00E9rminos generales
+report.evolution.compliance.graphic.title.fixed  = Evoluci\u00F3n del nivel de adecuaci\u00F3n estimado: en t\u00E9rminos fijos
+report.evolution.compliance.graphic.title.global = Evoluci\u00F3n del nivel de adecuaci\u00F3n estimado: en t\u00E9rminos generales
 
 resultado.observatorio.activo.alt                                = Activo
 resultado.observatorio.detalle.semilla.rastreo.title             = Detalle de Semilla
