Ignoreing huge files to push to oaw ctt github repository
Former-commit-id: bbc545cb58802b4d855fd171e194e485d76b254e

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 **/.metadata
 **/.sts4-cache
 **/motor-js
-**/.history
-motor-js/*
-motor-js/instalacion/imagenes.tar.gz
-motor-js/instalacion/imagenes/*
+**/.history./portal/target/oaw.war
+./motor-js/instalacion/imagenes.tar.gz
+./.git/objects/pack/pack-ac77e3b7ac0732349f3a87222aae011645dc30ae.pack
+./.git/objects/pack/pack-f67ad07c01361c2261119133994ad321b9534d41.pack
