The tags are added in the list of observatories, but the tags are not displayed correctly. You still need to transform the tag list into a tag box.
Former-commit-id: a915bb5af7bcbea98a3dffc7aaa4cb40137494a2

--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -710,6 +710,7 @@ indice.cuentas.usuario.vacio                       = No hay cuentas de cliente d
 indice.observatorio.acciones                       = Acciones
 indice.observatorio.anexos.alt                     = Generar anexos de resultados
 indice.observatorio.cartucho                       = Cartucho
+indice.observatorio.etiquetas                      = Etiquetas
 indice.observatorio.conclusiones.alt               = Subir Conclusiones
 indice.observatorio.detalle.alt                    = Detalle Observatorio
 indice.observatorio.eliminar.alt                   = Eliminar Observatorio
