Updated properties config

--- a/portal/profiles/mail.properties
+++ b/portal/profiles/mail.properties
@@ -1,12 +1,12 @@
 # Par\u00E1metros para el env\u00EDo de correos
 mail.transport.protocol = smtp
-mail.smtp.host = premdm.mpt.es
+mail.smtp.host =
 mail.smtp.port=25
 mail.smtp.sslport=
 mail.smtp.tls=false
-mail.smtp.user=observ.accesibilidad@premdm.mpt.es
-mail.smtp.pass=5noviembre2014
-mail.address.from =observ.accesibilidad@premdm.mpt.es
+mail.smtp.user=
+mail.smtp.pass=
+mail.address.from =
 mail.address.from.name = Observatorio de accesibilidad
 mail.message.subject = Rastreador Web MINHAP
 error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
