--- a/portal/profiles/desarrollo/mail.properties
+++ b/portal/profiles/desarrollo/mail.properties
@@ -7,28 +7,24 @@ alert.from.subject = [DESA] Error en la aplicaci\u00F3n del Rastreador
 error.mail.message         = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
 error.mail.message.subject = [OAW] Error en el rastreo Rastreador Web MINHAP
 
-incomplete.crawler.emails         = alvaro.pelaez@fundacionctic.org
+incomplete.crawler.emails         = mail@example.com
 incomplete.crawler.subject        = [DESA] Rastreo inacabado {0}
 incomplete.crawler.text           = El rastreo para {0} ha devuelto solo {1} resultados de {2} esperados.\n\nInformaci\u00F3n adicional del rastreo:\n\n- En directorio: {3}\n- Conectvidad OAW: {4}\n- Conectividad motor: {5}
-incomplete.crawler.warning.emails = alvaro.pelaez@fundacionctic.org
+incomplete.crawler.warning.emails = mail@example.com
 
-mail.address.from       = alvaro.pelaez@fundacionctic.org
+mail.address.from       = mail@example.com
 mail.address.from.name  = MINHAP Validador Accesibilidad
 mail.message            = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
 mail.message.subject    = Rastreador Web MINHAP
-mail.smtp.host          = smtp.fundacionctic.org
+mail.smtp.host          = smtp.example.com
 mail.smtp.tls           = false
 mail.transport.protocol = smtp
 
-sim.mailservice.id       = 942
-#sim.mailservice.wsdl.url = https://misim.redsara.es/misim-bus-webapp/EnvioMensajesService?wsdl
-#sim.mailservice.wsdl.url = https://pre-misim.redsara.es/misim-bus-webapp/EnvioMensajesService?wsdl
-#sim.user.username = observ.accesibilidad
-#sim.user.password = OAW,16.SIM
-#sim.mailservice.id= 742
-#Integracion
-sim.mailservice.wsdl.url = https://pre-misim.redsara.es/misim-bus-webapp/EnvioMensajesService?wsdl
-sim.user.password        = OAW,16.SIM
-sim.user.username        = observ.accesibilidad
+
+#SIM Service conguration https://administracionelectronica.gob.es/ctt/sim
+sim.mailservice.id       = 
+sim.mailservice.wsdl.url = 
+sim.user.password        = 
+sim.user.username        = 
 
 warning.administrator.message = Se le ha enviado este correo para avisarle de que ha tenido lugar un error irrecuperable en el Rastreador Web:
