--- a/portal/profiles/docker/mail.properties
+++ b/portal/profiles/docker/mail.properties
@@ -1,12 +1,12 @@
 # Par\u00E1metros para el env\u00EDo de correos
 mail.transport.protocol = smtp
-mail.smtp.host = smtp.fundacionctic.org
+mail.smtp.host = smtp.example.com
 mail.smtp.port =
 mail.smtp.sslport=
 mail.smtp.tls=false
 mail.smtp.user =
 mail.smtp.pass =
-mail.address.from = alvaro.pelaez@fundacionctic.org
+mail.address.from = mail@example.com
 mail.address.from.name = MINHAP Validador Accesibilidad
 mail.message.subject = Rastreador Web MINHAP
 error.mail.message.subject = [OAW] Error en el rastreo Rastreador Web MINHAP
@@ -15,18 +15,11 @@ mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1}
 
 incomplete.crawler.subject = [OAW] Rastreo inacabado {0}
 incomplete.crawler.text = El rastreo para {0} ha devuelto solo {1} resultados
-incomplete.crawler.emails = alvaro.pelaez@fundacionctic.org
-incomplete.crawler.warning.emails = alvaro.pelaez@fundacionctic.org
+incomplete.crawler.emails = mail@example.com
+incomplete.crawler.warning.emails = mail@example.com
 
-#sim.mailservice.wsdl.url = https://misim.redsara.es/misim-bus-webapp/EnvioMensajesService?wsdl
-#sim.mailservice.wsdl.url = https://pre-misim.redsara.es/misim-bus-webapp/EnvioMensajesService?wsdl
-#sim.user.username = observ.accesibilidad
-#sim.user.password = OAW,16.SIM
-#sim.mailservice.id= 742
-
-#Integracion
-
-sim.mailservice.wsdl.url = https://pre-misim.redsara.es/misim-bus-webapp/EnvioMensajesService?wsdl
-sim.user.username = observ.accesibilidad
-sim.user.password = OAW,16.SIM
-sim.mailservice.id= 942
+#SIM Service conguration https://administracionelectronica.gob.es/ctt/sim
+sim.mailservice.wsdl.url = 
+sim.user.username = 
+sim.user.password = 
+sim.mailservice.id= 
