--- a/portal/src/main/resources/management.properties
+++ b/portal/src/main/resources/management.properties
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (C) 2012 INTECO, Instituto Nacional de Tecnologías de la Comunicación, 
+# Copyright (C) 2012 INTECO, Instituto Nacional de Tecnologï¿½as de la Comunicaciï¿½n, 
 # This program is licensed and may be used, modified and redistributed under the terms
 # of the European Public License (EUPL), either version 1.2 or (at your option) any later 
 # version as soon as they are approved by the European Commission.
@@ -10,10 +10,10 @@
 # You should have received a copy of the EUPL1.2 license along with this program; if not, 
 # you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32017D0863
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# Modificaciones: MINHAFP (Ministerio de Hacienda y Función Pública) 
+# Modificaciones: MINHAFP (Ministerio de Hacienda y Funciï¿½n Pï¿½blica) 
 # Email: observ.accesibilidad@correo.gob.es
 #-------------------------------------------------------------------------------
-alert.from.address = observ.accesibilidad@premdm.mpt.es
+alert.from.address = 
 alert.from.name = [Alerta] Rastreador Web
 # Las alertas se enviar\u00E1n a todos los usuarios con rol administrador de la herramienta
 
