--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,4 @@
 **/.settings
 **/.metadata
 **/.sts4-cache
-**/motor-js
-**/.history./portal/target/oaw.war
-./motor-js/instalacion/imagenes.tar.gz
+**/.history
