--- a/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
+++ b/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
@@ -2562,8 +2562,8 @@ pdf.accessibility.global.summary.info                   = Los niveles de adecuac
 pdf.accessibility.global.summary.p1                     = En este apartado se muestran los resultados globales del sitio web calculados de acuerdo a la metodolog\u00EDa actual del Observatorio de Accesibilidad Web. Los resultados calculados son los siguientes:
 pdf.accessibility.global.summary.p2                     = La {0} refleja la cantidad de verificaciones de accesibilidad que se satisfacen correctamente. Por lo tanto, cuanta m\u00E1s alta sea la puntuaci\u00F3n m\u00E1s verificaciones de accesibilidad se est\u00E1n cumpliendo.
 pdf.accessibility.global.summary.p2.bold                = puntuaci\u00F3n media del sitio web
-pdf.accessibility.global.summary.p3                     = El nivel de cumplimiento estimado del sitio web (Sin declaraci\u00F3n, No v\u00E1lido, Parcial y Completa) est\u00E1 relacionado con el nivel de cumplimiento de las verificaciones que se satisfacen.
-pdf.accessibility.global.summary.p3.bold                = nivel de adecuaci\u00F3n estimado
+pdf.accessibility.global.summary.p3                     = El {0} del sitio web (Sin declaraci\u00F3n, No v\u00E1lido, Parcial y Completa) est\u00E1 relacionado con el nivel de cumplimiento de las verificaciones que se satisfacen.
+pdf.accessibility.global.summary.p3.bold                = nivel de cumplimiento estimado
 pdf.accessibility.global.summary.p4                     = La {0} del sitio web (No conforme, Parcialmente conforme o Totalmente conforme) est\u00E1 relacionada con la conformidad (No aplica, Conforme o No conforme) de cada una de las verificaciones a nivel de sitio web.
 pdf.accessibility.global.summary.p4.bold                = situaci\u00F3n de cumplimiento estimada
 pdf.accessibility.global.summary.p5                     = Tambi\u00E9n se indica a modo de {0} la posici\u00F3n del sitio web a nivel global de todo el Observatorio, a nivel del segmento al que perteneces y a nivel del grupo Complejidad en el que est\u00E1 enmarcado.
