--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2802,10 +2802,10 @@ rastreo.realizado.busqueda.semilla      = Semilla
 report.config.title                              = T\u00EDtulo del informe
 report.config.title.default                      = Informe de observatorio de accesibilidad web
 report.config.title.label                        = T\u00EDtulo del documento generado
-report.evolution.allocation.graphic.title.fixed  = Evoluci\u00F3n del nivel de adecuaci\u00F3n estimado: en t\u00E9rminos fijos
-report.evolution.allocation.graphic.title.global = Evoluci\u00F3n del nivel de adecuaci\u00F3n estimado: en t\u00E9rminos generales
-report.evolution.compliance.graphic.title.fixed  = Evoluci\u00F3n del nivel de adecuaci\u00F3n estimado: en t\u00E9rminos fijos
-report.evolution.compliance.graphic.title.global = Evoluci\u00F3n del nivel de adecuaci\u00F3n estimado: en t\u00E9rminos generales
+report.evolution.allocation.graphic.title.fixed  = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: en t\u00E9rminos fijos
+report.evolution.allocation.graphic.title.global = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: en t\u00E9rminos generales
+report.evolution.compliance.graphic.title.fixed  = Evoluci\u00F3n de la Situaci\u00F3n de cumplimento estimado: en t\u00E9rminos fijos
+report.evolution.compliance.graphic.title.global = Evoluci\u00F3n de la Situaci\u00F3n de cumplimiento estimada: en t\u00E9rminos generales
 
 resultado.observatorio.activo.alt                                = Activo
 resultado.observatorio.detalle.semilla.rastreo.title             = Detalle de Semilla
