--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -75,6 +75,20 @@
 	</build>
 
 	<dependencies>
+		
+		<!-- SERVLET API -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>es.minhap.oaw</groupId>
 			<artifactId>intav-core</artifactId>
@@ -164,18 +178,7 @@
 			<version>1.2.8</version>
 		</dependency>
 
-		<!-- SERVLET API -->
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.3</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-		</dependency>
+		
 
 		<!-- Test -->
 		<dependency>
@@ -198,13 +201,6 @@
 			<artifactId>gson</artifactId>
 			<version>2.2.2</version>
 			<scope>compile</scope>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/javax.transaction/jta -->
-		<dependency>
-			<groupId>javax.transaction</groupId>
-			<artifactId>jta</artifactId>
-			<version>1.1</version>
 		</dependency>
 
 		<dependency>
@@ -232,7 +228,19 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.8.11</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		
 
 	</dependencies>
 
